--- a/testando.html
+++ b/testando.html
@@ -9,23 +9,23 @@
 </head>
 <body>
 
-	
-	<div class="Sidebar">
-		<div class="img-sidebar">
-			<img src=" logo.png ">
-		</div> <!--img sidebar -->
+	<header>
+		<div class="Sidebar">
+			<div class="img-sidebar">
+				<img src=" logoteste.png " width="320" height="240">
+			</div> <!--img sidebar -->
 
-	<div class="menu"> 
-		<a href="#"> Sobre </a>
-		<a href="#"> Perguntas Frequentes </a>
-		<a href="#"> Entre em contato </a>
+		<nav id="menu"> 
+			<a href="#"> Sobre </a>
+			<a href="#"> Perguntas Frequentes </a>
+			<a href="#"> Entre em contato </a>
 
-	</div> <!-- menu  -->
-
+		</nav> <!-- menu  -->
+	</header>
 
 	</div> <!-- sidebar   -->
 
-	<div class="conteudo">
+	<div id="conteudo">
 		
 	<h1> Modelo de site 1 </h1>
 
