--- a/testando.html
+++ b/testando.html
@@ -10,17 +10,33 @@
 <body>
 
 	<header>
-		<div class="Sidebar">
-			<div class="img-sidebar">
-				<img src=" logoteste.png " width="320" height="240">
-			</div> <!--img sidebar -->
+		
+			<div class="img-logo">
+				<img src=" logoteste.png" class="menu-logo">
+			</div> <!--img logo -->
 
-		<nav id="menu"> 
-			<a href="#"> Sobre Mim</a>
-			<a href="#"> Perguntas Frequentes </a>
-			<a href="#"> Entre em Contato </a>
 
-		</nav> <!-- menu  -->
+		<div class="menu-links">
+		<ul>
+			<li>
+				<a href="#" class="links">Sobre Mim</a>
+			</li>
+			<li>
+				<a href="#" class="links">Perguntas Frequentes</a>
+			</li>
+			<li>
+				<a href="#" class="links">Entre em Contato</a>
+			</li>
+
+		</ul> <!-- menu  -->
+		</div>
+
+		<div id="divBusca">
+		  <img src="search3.png" alt=""/>
+		  <input type="text" id="txtBusca" placeholder="Buscar..."/>
+		 
+		</div>
+
 	</header>
 
 	</div> <!-- sidebar   -->
