--- a/testando.html
+++ b/testando.html
@@ -11,9 +11,9 @@
 
 	<header>
 		
-			<div class="img-logo">
-				<img src=" logoteste.png" class="menu-logo">
-			</div> <!--img logo -->
+		<div class="img-logo">
+			<img src=" logo2.png" class="menu-logo">
+		</div> <!--img logo -->
 
 
 		<div class="menu-links">
@@ -31,11 +31,7 @@
 		</ul> <!-- menu  -->
 		</div>
 
-		<div id="divBusca">
-		  <img src="search3.png" alt=""/>
-		  <input type="text" id="txtBusca" placeholder="Buscar..."/>
-		 
-		</div>
+	
 
 	</header>
 
