--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <div class="container">
 
+        <!-- HEADER -->
         <header>
 
             <a href="#" class="img-logo"> <img src="logo1.png"> </a>
@@ -25,18 +26,31 @@
 
         </header> 
 
+        <!-- MAIN -->
         <main>
-            <h1>Conteúdo</h1>
-            <p> Olá! Tudo bem?</p>
-            </p>
+            <img src="fisioterapeuta.jpg" width="480px">
         </main>
+
+        <!-- SECTION -->
         <section>
-            <h2> Mais conteúdo</h2>
-            <p>Bem aqui</p>
+            <h2> Fisioterapia </h2>
+            <p>A fisioterapia é indicada em diversos casos, seja para tratar uma lesão por esforço repetitivo (LER) ou em pacientes que acabaram de 
+                se operar para ajudar na recuperação dos órgãos e das cicatrizes que podem incomodar a movimentação. <br>
+                Ela geralmente tem uma atuação em longo prazo, na qual o paciente vai sentindo a melhora física aos poucos.
+                O tratamento fisioterápico traz técnicas específicas que vão ajudar as pessoas a terem uma recuperação motora de forma eficaz 
+                e sem prejudicar algum outro aspecto do corpo. Além disso, a fisioterapia é importante na prevenção de problemas.<br>
+                Você já ouviu falar em ginástica laboral? Ela, por exemplo, é um tipo de fisioterapia preventiva e consiste em uma série de 
+                exercícios feitos no trabalho para melhorar a saúde dos funcionários. Essas atividades são uma forma de evitar o aparecimento de 
+                doenças ocupacionais, como a LER, problemas de coluna, nos ombros, entre outros.</p>
+
         </section>
+
+        <!-- ASIDE -->
         <aside>
             Anuncios
         </aside>
+
+        <!-- FOOTER -->
         <footer>Anuncios</footer>
     </div>
 
